[package]
name = "deep-search"
version = "0.1.0"
authors = ["Devin Bidwell <dbidwell94@gmail.com>"]
edition = "2018"
description = "An in-progress Linux terminal tool similar to Grep which aims to be faster and easer to use"
homepage = "https://github.com/dbidwell94/deep-search"
repository = "https://github.com/dbidwell94/deep-search"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
